# estate-assistant-system

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  .travis.yml  .vercelignore  AGENTS.md  ARCHITECTURE.md  CITATION.cff  CLAUDE.md  DEPLOYMENTS.md  DEVOPS.md  Dockerfile  EDA-CLI-Chatbot.ipynb  EstateWise-CLI-Chatbot.ipynb  EstateWise.ipynb  GRPC_TRPC.md  Initial-Data-Analysis.ipynb  Jenkinsfile  Makefile  RAG_SYSTEM.md  README.md  TECH_DOCS.md  TRAVIS_CI.md  Team_Z_Capstone_Project_Scavenger_Hunt.ipynb  architecture.md  buildspec.yml  docker-compose.yml  jsdoc.json  openapi.yaml  package-lock.json  package.json  pyproject.toml  tox.ini  typedoc.json
.agents/: README.md
.claude/: settings.json  settings.local.json
.devcontainers/: backend-devcontainer.json  frontend-devcontainer.json
.githooks/: commit-msg
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  copilot_instructions.md
agentic-ai/: .dockerignore  COSTS.md  DEPLOYMENT.md  Dockerfile  ENTERPRISE_PIPELINE.md  PIPELINE_ENHANCEMENT.md  README.md  deploy.sh  docker-compose.yaml  package-lock.json  package.json  tsconfig.json
aws/: Dockerfile  Makefile  README.md  codepipeline.yaml  deploy.sh  docker-compose.yml
azure/: README.md  azure-pipelines.yml  deploy.sh
backend/: .neo4j_ingest_checkpoint.json  Dockerfile  README.md  jest.config.js  package-lock.json  package.json  publish_backend.sh
data/: Dockerfile  README.md  data_summary.py  export_properties.py  pinecone_client.py
deployment-control/: README.md  package.json  (+2 more)
(+529 files in other folders)
